updated bio, added contact info

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <img src ="images/Gravatar.JPG" alt="headshot of developer">   
+ <img src ="images/Gravatar.JPG" alt="headshot of developer"> 
+ <p>Hi, I'm Sarah Walker</p>  
 </body>
 </html>
