added background color

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 </head>
 <body>
  <img src ="images/Gravatar.JPG" alt="headshot of developer"> 
- <p>Hi, I'm Sarah Walker</p>  
+ <p>Hi Everyone,
+     My name is Sarah Walker. I love to read, hike, cook, and travel.
+ </p> 
+ <h2>Contact Info</h2>
+ <ul>
+     <li>Email:<a>sfwalker12@gmail.com</a></li>
+     <li>Github:<a>sfw816-hub</a></li>
+     <li>Portfolio: <a>WIP</a></li>
+ </ul> 
+ 
 </body>
 </html>
